classes: users, groups, and tree is added in the main window

--- a/Eclipse-RCP/plugin.xml
+++ b/Eclipse-RCP/plugin.xml
@@ -23,5 +23,12 @@
    </extension>
    <extension
          point="org.eclipse.ui.views">
+      <view
+            class="viewpart.ContactsView"
+            icon="icons/contacts.png"
+            id="Eclipse-RCP.viewpart.contacts"
+            name="Contacts"
+            restorable="true">
+      </view>
    </extension>
 </plugin>
